FILE(GLOB SOURCE_FRUSTUM_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FRUSTUM_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(FrustumCulling ${SOURCE_FRUSTUM_FILES} ${HEADER_FRUSTUM_FILES})
TARGET_LINK_LIBRARIES(FrustumCulling glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(FrustumCulling glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(FrustumCulling PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS FrustumCulling DESTINATION bin)