FILE(GLOB FRUSTUM_CULLING_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB FRUSTUM_CULLING_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(FrustumCullingCompute ${FRUSTUM_CULLING_SOURCE_FILES} ${FRUSTUM_CULLING_HEADER_FILES} )
TARGET_LINK_LIBRARIES(FrustumCullingCompute glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(FrustumCullingCompute glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(FrustumCullingCompute PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} )

INSTALL(TARGETS FrustumCullingCompute DESTINATION bin)