FILE(GLOB MANDELBROT_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB MANDELBROT_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(GameOfLife ${MANDELBROT_SOURCE_FILES} ${MANDELBROT_HEADER_FILES})
TARGET_LINK_LIBRARIES(GameOfLife glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(GameOfLife glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(GameOfLife PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS GameOfLife DESTINATION bin)