FILE(GLOB GAMMA_CORRECTION_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB GAMMA_CORRECTION_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(GammaCorrection ${GAMMA_CORRECTION_SOURCE_FILES} ${GAMMA_CORRECTION_HEADER_FILES})
TARGET_LINK_LIBRARIES(GammaCorrection glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(GammaCorrection glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(GammaCorrection PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS GammaCorrection DESTINATION bin)