FILE(GLOB GLOW_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_EXECUTABLE(Glow ${GLOW_FILES} ${HEADER_FILES})
TARGET_LINK_LIBRARIES(Glow glCommon gl-sample-common-asset-importer)
ADD_DEPENDENCIES(Glow glCommon gl-sample-common-asset-importer)

TARGET_INCLUDE_DIRECTORIES(Glow PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

INSTALL(TARGETS Glow DESTINATION bin)